<resources>
    <string name="app_name">Nutrition tracker</string>
    <string name="Title">Nutrition Tracker</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="empty_field">All fields must be filled.</string>
    <string name="wrong_pass_format">Password has to be at least 4 characters, have at least 1 digit and i uppercase, and cant contain special characters.</string>
    <string name="wrong_pass">"Wrong password."</string>
    <string name="account_not_found">Wrong username or password.</string>

    <string name="home">Home</string>
    <string name="filter">Filter</string>
    <string name="stats">Stats</string>
    <string name="meal_plan">Meal plan</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder">placeholder</string>
    <string name="search_meals">Search meals</string>
    <string name="ok">ok</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="sort">sort</string>
    <string name="min_cal">min cal</string>
    <string name="max_cal">max cal</string>
    <string name="breakfast">breakfast</string>
    <string name="lunch">lunch</string>
    <string name="dinner">dinner</string>
    <string name="snack">snack</string>
    <string name="cancel">cancel</string>
    <string name="startcamera">Open camera?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="allow">allow</string>
    <string name="category">Category</string>
    <string name="area">Area</string>
    <string name="ingredient">Ingredient</string>
    <string name="show_sorted">Show sorted</string>
    <string name="pagination">pagination</string>
    <string name="tags">Tags</string>
    <string name="meal_name">Meal name</string>
    <string name="show">Show</string>
    <string name="api">api</string>
    <string name="saved">saved</string>
    <string name="meals_number">Meals number</string>
    <string name="calories">Calories</string>
    <string name="prev">prev</string>
    <string name="next">next</string>
    <string name="delete">Delete</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="send">Send</string>
    <string name="send2">Send</string>

    <string name="sex">Sex</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="physical_activity">Physical activity</string>

    <string name="save_changes">Save changes</string>

    <string-array name="spinner">
        <item>Category</item>
        <item>Area</item>
        <item>Ingredient</item>
    </string-array>
</resources>