<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_filter"
        android:icon="@drawable/ic_search"
        android:title="@string/filter" />

    <item
        android:id="@+id/navigation_stats"
        android:icon="@drawable/ic_bar"
        android:title="@string/stats" />

    <item
        android:id="@+id/navigation_meal_plan"
        android:icon="@drawable/ic_plan"
        android:title="@string/meal_plan" />


    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_foreground"
        android:title="@string/profile" />

</menu>