<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="rs.raf.projekat_jun_sava_ivkovic_rn1220_mihailo_trajkovic_rn320.model.ProfileViewModel"/>
    </data>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.fragment.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="20dp">
    <ImageView
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:src="@drawable/ic_profile_foreground"
        />

    <TextView
        android:id="@+id/tvProfileUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@={viewmodel.username}"
        android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:layout_marginTop="60dp"/>
    <EditText
        android:id="@+id/etHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@={viewmodel.height}"
        android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weight"/>
        <EditText
            android:id="@+id/etWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@={viewmodel.weight}"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age"/>
        <EditText
            android:id="@+id/etAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@={viewmodel.age}"
            android:layout_marginBottom="40dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSaveChanges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_changes"
            android:layout_marginBottom="20dp">

        </androidx.appcompat.widget.AppCompatButton>

</LinearLayout></ScrollView>

</FrameLayout>

</layout>